# fedavg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  shell.nix
notebooks/: DQN Example.ipynb  Federated DQN.ipynb  Torch DQN Tutorial.ipynb  inference_pipeline.ipynb
src/: bandit-solver.py  dqn.py  fashion_mnist.py  fed_fashion_mnist.py  fedavg.py  games.py  guessing_agent.py  guessing_game.py  gym-ex.py  scratch.py  server.py  torch-fed-avg.py
src/small-experiments/: gpt-scratch.py
tex/: report.tex  rlproject.bib
