[tool.poetry]
name = "fedavg-torch"
version = "0.1.0"
description = "Federated Averaging"
authors = ["ogkloo <weathercontrol@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
